--- a/cat/index.html
+++ b/cat/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:MidnightBlue;">
-    <font face ="verdana" style="color:lightgray">
+  <body style="background-color:maroon;">
+    <font face ="verdana" style="color:white">
    
-    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Español</a></span>
-      <a style="color:lightgray" href="http://izeland.com/cat/info.html">Info</a></div>
+    <div><span style="float:right"><a style="color:white" href="../index.html">Español</a></span>
+      <a style="color:white" href="http://izeland.com/cat/info.html">Info</a></div>
 
     <h1 style="text-align:center">
         Mat Maths ~ Aventures a Izeland
@@ -24,27 +24,27 @@
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
       <ul>
-      <li><a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></li>
-      <li><a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
-      <li><a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
       </ul>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
     <ul>      
-    <li><a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
+    <li><a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
       </ul>
       </td>
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <ul>      
-    <li><a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
+    <li><a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
       </ul>
       </td>
       </tr>
