--- a/cat/info.html
+++ b/cat/info.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:MidnightBlue;">
-    <font face ="verdana" style="color:lightgray">
+  <body style="background-color:DarkSlateGrey;">
+    <font face ="verdana" style="color:white">
       
-    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Español</a></span>
-      <a style="color:lightgray" href="index.html">Inici</a></div>
+    <div><span style="float:right"><a style="color:white" href="../index.html">Español</a></span>
+      <a style="color:white" href="index.html">Inici</a></div>
   
       
     <h1 style="text-align:center">
