--- a/cat/index.html
+++ b/cat/index.html
@@ -39,6 +39,7 @@
       </ul>
       </td>
       <td>
+    <p align="right">1r ESO</p>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <ul>      
