--- a/cat/index.html
+++ b/cat/index.html
@@ -21,6 +21,7 @@
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
       <td>
+      <p></p>
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
       <ul>
@@ -28,8 +29,10 @@
       <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
       <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
       </ul>
+      <p align="right">(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
+    <p></p>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
     <ul>      
@@ -37,9 +40,10 @@
     <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
     <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
       </ul>
+      <p align="right">(Unitat 2: Divisibilitat)</p>
       </td>
       <td>
-    <p align="right">1r ESO</p>
+    <p align="right" size="4">(1r ESO)</p>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <ul>      
@@ -47,6 +51,7 @@
     <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
     <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
       </ul>
+      <p align="right">(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
       <tr>
