--- a/cat/index.html
+++ b/cat/index.html
@@ -29,7 +29,7 @@
       <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
       <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
       </ul>
-      <p align="right">(Unitat 1: Xifres i nombres)</p>
+      <p>(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
     <p></br></p>
@@ -40,7 +40,7 @@
     <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
     <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
       </ul>
-      <p align="right">(Unitat 2: Divisibilitat)</p>
+      <p>(Unitat 2: Divisibilitat)</p>
       </td>
       <td>
     <p align="right" size="4">(1r ESO)</p>
@@ -51,7 +51,7 @@
     <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
     <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
       </ul>
-      <p align="right">(Unitat 3: Definició de fraccions)</p>
+      <p>(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
       <tr>
