--- a/cat/index.html
+++ b/cat/index.html
@@ -15,13 +15,12 @@
     </font>
     <br>
     <h2 style="text-align:center">
-        Temporada 1: Ko, la muntanya màgica
+        Temporada 1: Ko, la muntanya màgica (1r ESO)
     </h2>
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
       <td>
-      <p><br></p>
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
       <ul>
@@ -32,7 +31,6 @@
       <p>(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
-    <p></br></p>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
     <ul>      
@@ -43,7 +41,6 @@
       <p>(Unitat 2: Divisibilitat)</p>
       </td>
       <td>
-    <p align="right" size="4">(1r ESO)</p>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <ul>      
