--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br></li>
       <li><a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a></li>
       </ul>
+      <p>(Unidad 1: Cifras y números)</p>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
@@ -37,6 +38,7 @@
     <li><a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br></li>
     <li><a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a></li>
     </ul>
+      <p>(Unidad 2: Divisibilidad)</p>
         </font>
       </td>
       <td>
@@ -46,7 +48,8 @@
     <li><a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br></li>
     <li><a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br></li>
     <li><a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a></li>
-    </ul>  
+    </ul>
+      <p>(Unidad 3: Definición de fracciones)</p>
       </td>
       </tr>
       <tr>
