--- a/cat/index.html
+++ b/cat/index.html
@@ -15,7 +15,7 @@
     </font>
     <br>
     <h2 style="text-align:center">
-        Temporada 1: Ko, la muntanya màgica (1r ESO)
+        Temporada 1: Ko, la muntanya màgica ~ 1r ESO
     </h2>
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
