--- a/cat/info.html
+++ b/cat/info.html
@@ -23,7 +23,7 @@
       <td>
  En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
    i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se li presenten.
-<p>Les aventures apareixen en fitxes descarregables i imprimibles en B/N amb aspecte de llibre de lectura que, a banda de la història, 
+<p>Les aventures apareixen en fitxes descarregables i imprimibles en B/N a doble cara amb aspecte de llibre de lectura que, a banda de la història, 
   contenen quadres de definició i exercicis per a treballar els continguts matemàtics.</p>
 <p>Mat Maths comprendrà els quatre cursos de secundària. 
         Cada curs contindrà de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
