--- a/info.html
+++ b/info.html
@@ -29,6 +29,7 @@ Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras 
 <p>Mat Maths puede ser útil en muchas situaciones diversas:</p>
 
 <ul>
+<li>Como material complementario en una aula ordinaria.</li>
 <li>En grupos difíciles o en aulas de acogida.</li>
 <li>Para cubrir una lección con un/a profesor/a de guardia en ausencia del/a titular.</li>
 <li>Para el trabajo autónomo de los alumnos en casa.</li>
