--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:MidnightBlue;">
-    <font face ="verdana" style="color:lightgray">
+  <body style="background-color:white;">
+    <font face ="verdana" style="color:white">
       
-    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Català</a></span><a style="color:lightgray" href="info.html">Info</a></div>
+    <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span><a style="color:lightgray" href="info.html">Info</a></div>
       
     <h1 style="text-align:center">
         Mat Maths ~ Aventuras en Izeland
@@ -24,9 +24,9 @@
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <ul>
-      <li><a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br></li>
-      <li><a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br></li>
-      <li><a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br></li>
+      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br></li>
+      <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a></li>
       </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
       </td>
@@ -34,9 +34,9 @@
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
     <ul>     
-    <li><a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a></li>
+    <li><a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a></li>
     </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 2: Divisibilidad)</p>
         </font>
@@ -45,9 +45,9 @@
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
     <ul>  
-    <li><a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br></li>
-    <li><a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a></li>
+    <li><a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a></li>
     </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de fracciones)</p>
       </td>
@@ -56,7 +56,6 @@
       <td>
       </td>
       <td>
-        <br></br>
         <h3 style="text-align:center">Continuará...</h3>
       </td>
       </tr>
