--- a/cat/info.html
+++ b/cat/info.html
@@ -34,6 +34,7 @@ Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cu
 de transmetre coneixement a partir d’històries, i rigorós, ja que els continguts són acurats i curriculars.</p>
 <p>Mat Maths és útil en moltes situacions diverses:
 <ul>
+<li>Com a material de suport en una classe ordinària.</li>
 <li>En grups difícils o en aules d’acollida.</li>
 <li>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</li>
 <li>Per al treball autònom dels alumnes a casa.</li>
