--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@ Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras 
 
 <ul>
 <li>Como material complementario en una clase ordinaria.</li>
-<li>En grupos difíciles o en aulas de acogida.</li>
+<li>Como material principal en grupos difíciles o en aulas de acogida.</li>
 <li>Para cubrir una lección con un/a profesor/a de guardia en ausencia del/a titular.</li>
 <li>Para el trabajo autónomo de los alumnos en casa.</li>
 <li>En clases interdisciplinares de matemáticas y lengua.</li>
