--- a/cat/info.html
+++ b/cat/info.html
@@ -35,7 +35,7 @@ de transmetre coneixement a partir d’històries, i rigorós, ja que els contin
 <p>Mat Maths és útil en moltes situacions diverses:
 <ul>
 <li>Com a material de suport en una classe ordinària.</li>
-<li>En grups difícils o en aules d’acollida.</li>
+<li>Com a material principal en grups difícils o en aules d’acollida.</li>
 <li>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</li>
 <li>Per al treball autònom dels alumnes a casa.</li>
 <li>En classes interdisciplinars de matemàtiques i llengua.</li>
