--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:white;">
+  <body style="background-color:midnightblue;">
     <font face ="verdana" style="color:white">
       
     <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span><a style="color:lightgray" href="info.html">Info</a></div>
