--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
       <td>
-      <img src="images/mm1-1-2.png" width="361" heigth="345">
+      <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <ul>
       <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br></li>
@@ -31,7 +31,7 @@
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
       </td>
       <td>
-    <img src="images/mm1-2-2.png" width="361" heigth="345">
+    <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
     <ul>     
     <li><a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br></li>
@@ -42,7 +42,7 @@
         </font>
       </td>
       <td>
-    <img src="images/mm1-3-1.png" width="361" heigth="345">
+    <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
     <ul>  
     <li><a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br></li>
