--- a/test/info.html
+++ b/test/info.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html>
+  <body style="background-color:darkolivegreen;">
+    <font face="verdana" style="color:white">
+      
+    <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span>
+      <a style="color:white" href="index.html">Inicio</a></div>
+      
+    <h1 style="text-align:center">
+        Mat Maths ~ Aventuras en Izeland
+    </h1>
+    <h2 style="text-align:center">
+        Propósito
+    </h2>
+    <br></br>
+    <div>
+    <table border = "0" style="margin: 0 auto;" cellspacing="25">
+      <tr>
+      <td style="vertical-align: top;">
+      <img src="../images/mm1-3-2.png">
+      </td>
+      <td>
+<font size ="4">
+Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras en la isla donde vive, Izeland, y con el que aprendemos matemáticas. Y es que gracias a las matemáticas conseguimos resolver los misterios que se le presentan.
+<p>Las aventuras aparecen en fichas descargables e imprimibles en B/N a doble cara, con el aspecto de libro de lectura que, además de la historia, contienen cuadros de definición y ejercicios para trabajar los contenidos matemáticos.</p>
+<p>Mat Maths comprenderá los cuatro cursos de secundaria. Cada curso contendrá de nueve a doce unidades didácticas y cada unidad, tres fichas. Sin embargo, desde el punto de vista de ficción hablamos de temporadas en lugar de cursos; de capítulos en lugar de unidades didácticas; y de actos en lugar de fichas.
+<p>Mat Maths es motivador y riguroso. Motivador, ya que se enmarca en la tradición de transmitir conocimiento a partir de historias, y riguroso, ya que los contenidos son precisos y curriculares.</p>
 
+<p>Mat Maths puede ser útil en muchas situaciones diversas:</p>
+
+<ul>
+<li>Como material complementario en una clase ordinaria.</li>
+<li>Como material principal en grupos difíciles o en aulas de acogida.</li>
+<li>Para cubrir una lección con un/a profesor/a de guardia en ausencia del/a titular.</li>
+<li>Para el trabajo autónomo de los alumnos en casa.</li>
+<li>En clases interdisciplinares de matemáticas y lengua.</li>
+<li>Como material de trabajo de verano.</li>
+</ul>
+
+<p>Mat Maths ha sido ideado por Xavi Juez, quien también ha elaborado los textos. Las ilustraciones son a cargo de Arnau Solà Vila.</p>
+<br></br>
+      <p>Agradeceremos que envíen a <b>izeland.com@gmail.com</b> cualquier tipo de comentario.</p>
+</font>
+</td>
+    </tr>
+    </table>
+    </div>
+    </font>    
+  </body>
+</html>
