--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:darkolivegreen;">
-    <font face ="verdana" style="color:white">
+    <font face ="verdana" style="color:white" size="4">
       
     <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span>
       <a style="color:white" href="index.html">Inicio</a></div>
