--- a/cat/index.html
+++ b/cat/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:maroon;">
-    <font face ="verdana" style="color:white">
+    <font face ="verdana" style="color:white" size="4">
    
     <div><span style="float:right"><a style="color:white" href="../index.html">Español</a></span>
       <a style="color:white" href="http://izeland.com/cat/info.html">Info</a></div>
