--- a/cat/info.html
+++ b/cat/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:DarkSlateGrey;">
-    <font face ="verdana" style="color:white">
+    <font face ="verdana" style="color:white" size="4">
       
     <div><span style="float:right"><a style="color:white" href="../index.html">Español</a></span>
       <a style="color:white" href="index.html">Inici</a></div>
