--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <ul>
       <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br></li>
-      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br></li>
+      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero peludo</a></br></li>
       <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a></li>
       </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
