--- a/cat/index.html
+++ b/cat/index.html
@@ -28,7 +28,7 @@
       <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
       <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
       </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
@@ -38,7 +38,7 @@
     <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
     <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
       </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
       </td>
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
@@ -48,7 +48,7 @@
     <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
     <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
       </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
       <tr>
