--- a/cat/index.html
+++ b/cat/index.html
@@ -24,9 +24,9 @@
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
       <ul>
-      <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></li>
-      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
-      <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">1.1. Embarcant</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">1.2. Un passatger molt pelut</a></li>
+      <li><a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">1.3. Cursa entre avions</a></li>
       </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
@@ -34,9 +34,9 @@
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
     <ul>      
-    <li><a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br></li>
-    <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
-    <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
+    <li><a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">2.1. Hora del pati</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">2.2. Reunió clandestina</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">2.3. Escapar de la fàbrica</a></li>    
       </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
       </td>
@@ -44,9 +44,9 @@
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <ul>      
-    <li><a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br></li>
-    <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
-    <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
+    <li><a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">3.1. Comença la festa</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">3.2. La botiga nova</a></br></li>
+    <li><a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">3.3. La primera cita</a></li>
       </ul>
       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
       </td>
