--- a/cat/index.html
+++ b/cat/index.html
@@ -23,12 +23,10 @@
       <td>
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
-      <ul>
-      <li>1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcant</a></li>
-      <li>1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un passatger molt pelut</a></li>
-      <li>1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Cursa entre avions</a></li>
-      </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
+      <p>1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcant</a></p>
+      <p>1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un passatger molt pelut</a></p>
+      <p>1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Cursa entre avions</a></p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
