--- a/cat/index.html
+++ b/cat/index.html
@@ -26,7 +26,7 @@
       &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcant</a></br>
       &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un passatger molt pelut</a></br>
       &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Cursa entre avions</a>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
