--- a/cat/index.html
+++ b/cat/index.html
@@ -31,22 +31,18 @@
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
-    <ul>      
-    <li>2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del pati</a></br></li>
-    <li>2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunió clandestina</a></br></li>
-    <li>2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fàbrica</a></li>    
-      </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
+    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del pati</a></br>
+    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunió clandestina</a></br>
+    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fàbrica</a>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
       </td>
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
-    <ul>      
-    <li>3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Comença la festa</a></br></li>
-    <li>3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La botiga nova</a></br></li>
-    <li>3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a></li>
-      </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
+    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Comença la festa</a></br>
+    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La botiga nova</a></br>
+    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
       <tr>
