--- a/index.html
+++ b/index.html
@@ -23,33 +23,27 @@
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <ul>
-      <li>1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcando</a></br></li>
-      <li>1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un pasajero peludo</a></br></li>
-      <li>1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Carrera entre aviones</a></li>
-      </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
+      &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcando</a></br>
+      &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un pasajero muy peludo</a></br>
+      &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Carrera entre aviones</a>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
-    <ul>     
-    <li>2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del patio</a></br></li>
-    <li>2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunión clandestina</a></br></li>
-    <li>2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fábrica</a></li>
-    </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 2: Divisibilidad)</p>
+    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del patio</a></br>
+    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunión clandestina</a></br>
+    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fábrica</a>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 2: Divisibilidad)</p>
         </font>
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
-    <ul>  
-    <li>3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br></li>
-    <li>3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br></li>
-    <li>3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a></li>
-    </ul>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de fracciones)</p>
+    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
+    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
+    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de fracciones)</p>
       </td>
       </tr>
       <tr>
