--- a/cat/index.html
+++ b/cat/index.html
@@ -42,7 +42,7 @@
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Comença la festa</a></br>
     &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La botiga nova</a></br>
     &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
+      <p>&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
       <tr>
