--- a/cat/info.html
+++ b/cat/info.html
@@ -41,9 +41,10 @@ de transmetre coneixement a partir d’històries, i rigorós, ja que els contin
 <li>En classes interdisciplinars de matemàtiques i llengua.</li>
 <li>Com a material de treball d’estiu.</li>
 </ul>
-<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les il·lustracions són a càrrec de l'Arnau Solà Vila.</p>
+<p>Mat Maths ha estat ideat per en Xavi Juez. Les il·lustracions són a càrrec de l'Arnau Solà Vila.</p>
 <br></br>
-<p>Agrairem que envïin a <b>izeland.com@gmail.com</b> qualsevol tipus de comentari.</p>
+<p align="right">Agrairem que envïin a <b>izeland.com@gmail.com</b> qualsevol tipus de comentari.</p>
+      <p align="right">Equip Izeland</p>
 
     </td>
     </tr>
