--- a/info.html
+++ b/info.html
@@ -37,7 +37,7 @@ Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras 
 <li>Como material de trabajo de verano.</li>
 </ul>
 
-<p>Mat Maths ha sido ideado por Xavi Juez, quien también ha elaborado los textos. Las ilustraciones son a cargo de Arnau Solà Vila.</p>
+<p>Mat Maths ha sido ideado por Xavi Juez y cuenta con las ilustraciones de Arnau Solà Vila.</p>
 
 <br></br>
       <p>Agradeceremos que envíen a <b>izeland.com@gmail.com</b> cualquier tipo de comentario.</p>
