--- a/cat/info.html
+++ b/cat/info.html
@@ -43,8 +43,9 @@ de transmetre coneixement a partir d’històries, i rigorós, ja que els contin
 </ul>
 <p>Mat Maths ha estat ideat per en Xavi Juez i compta amb les il·lustracions de l'Arnau Solà Vila.</p>
 <br></br>
-<p align="right">Agrairem que envïin a <b>izeland.com@gmail.com</b> qualsevol tipus de comentari.</p>
-      <p align="right">Equip Izeland</p>
+<p>Agrairem que envïin a <b>izeland.com@gmail.com</b> qualsevol tipus de comentari.</p>
+<br></br>
+      <p align="center">Equip Izeland</p>
 
     </td>
     </tr>
