--- a/info.html
+++ b/info.html
@@ -41,6 +41,8 @@ Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras 
 
 <br></br>
       <p>Agradeceremos que envíen a <b>izeland.com@gmail.com</b> cualquier tipo de comentario.</p>
+        <br></br>
+      <p align = "center">Equipo Izeland</p>
         
        
     </td>
