--- a/cat/index.html
+++ b/cat/index.html
@@ -11,7 +11,7 @@
     </h1>
     <br>
     <font size="4">
-    <p align="center">Acompanya a en Mat en les seves peripècies per Izeland y desvelarás els misteris que amaga aquesta illa foradada.<br>A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p>
+    <p align="center">Acompanya a en Mat en les seves peripècies per Izeland i desvelarás els misteris que amaga aquesta illa foradada.<br>A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p>
     </font>
     <br>
     <h2 style="text-align:center">
