--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <tr>
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
-      <h3>Capítulo 1: Vuelo a Twelville</h3>
+      <h4>Capítulo 1: Vuelo a Twelville</h4>
       &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcando</a></br>
       &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un pasajero muy peludo</a></br>
       &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Carrera entre aviones</a>
@@ -30,7 +30,7 @@
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
-    <h3>Capítulo 2: La coreografía</h3>
+    <h4>Capítulo 2: La coreografía</h4>
     &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del patio</a></br>
     &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunión clandestina</a></br>
     &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fábrica</a>
@@ -50,7 +50,7 @@
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará...</h3>
+        <h3 style="text-align:center">Continuará....</h3>
       </td>
       </tr>
     </table>
