--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
-    <h3>Capítulo 3: Cumpleaños feliz</h3>
+    <h4>Capítulo 3: Cumpleaños feliz</h4>
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
     &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
     &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
@@ -50,7 +50,7 @@
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará....</h3>
+        <h3 style="text-align:center">Continuará...</h3>
       </td>
       </tr>
     </table>
