--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         Temporada 1: Ko, la montaña mágica ~ 1º ESO
     </h2>
     <div>
-    <table border = "0" style="margin: 0 auto;" cellspacing="30">
+    <table border = "0" style="margin: 0 auto;" class="fixed">
+      <col width="385px" />
+      <col width="385px" />
+      <col width="385px" />
       <tr>
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
