--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </h2>
     <div>
     <table border = "0" style="margin: 0 auto;" class="fixed">
-      <col width="450px" />
-      <col width="450px" />
-      <col width="450px" />
+      <col width="425px" />
+      <col width="425px" />
+      <col width="425px" />
       <tr>
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
@@ -46,7 +46,7 @@
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
     &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
     &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
-      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de fracciones)</p>
+      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fracciones)</p>
       </td>
       </tr>
       <tr>
