--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <col width="425px" />
       <col width="425px" />
       <col width="425px" />
-      <tr>
+      <tr style="vertical-align:top">
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h4>Capítulo 1: Vuelo a Twelville</h4>
