--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <col width="425px" />
       <col width="425px" />
       <tr style="vertical-align:top">
-      <td>
+      <td valign="top">
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h4>Capítulo 1: Vuelo a Twelville</h4>
       &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcando</a></br>
@@ -31,7 +31,7 @@
       &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Carrera entre aviones</a>
       <p>&nbsp;&nbsp;&nbsp;(Unidad 1: Cifras y números)</p>
       </td>
-      <td>
+      <td valign="top">
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h4>Capítulo 2: La coreografía</h4>
     &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del patio</a></br>
@@ -40,7 +40,7 @@
       <p>&nbsp;&nbsp;&nbsp;(Unidad 2: Divisibilidad)</p>
         </font>
       </td>
-      <td>
+      <td valign="top">
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h4>Capítulo 3: Cumpleaños feliz</h4>
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
