--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
     &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
     &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
-      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de fracciones)</p>
+      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de </br>fracciones)</p>
       </td>
       </tr>
       <tr>
