--- a/cat/index.html
+++ b/cat/index.html
@@ -23,7 +23,7 @@
       <col width="425px" />
       <col width="425px" />
       <tr>
-      <td>
+      <td valign="top">
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h4>Capítol 1: Vol a Twelville</h4>
       &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcant</a></br>
@@ -31,7 +31,7 @@
       &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Cursa entre avions</a>
       <p>&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
-      <td>
+      <td valign="top">
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h4>Capítol 2: La coreografia</h4>
     &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del pati</a></br>
@@ -39,7 +39,7 @@
     &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fàbrica</a>
       <p>&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
       </td>
-      <td>
+      <td valign="top">
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h4>Capítol 3: Dotzè aniversari</h4>
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Comença la festa</a></br>
