--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Empieza la fiesta</a></br>
     &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La tienda nueva</a></br>
     &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
-      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fracciones)</p>
+      <p>&nbsp;&nbsp;&nbsp;(Unidad 3: Definición de </br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;;&nbsp;fracciones)</p>
       </td>
       </tr>
       <tr>
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará...</h3>
+        <h3 style="text-align:center">Continuará....</h3>
       </td>
       </tr>
     </table>
