--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head><link href="styles/style.css" rel="stylesheet" type="text/css"></head>
   <body style="background-color:midnightblue;">
     <font face ="verdana" style="color:white" size="4">
       
