--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará...</h3>
+        <h3 style="text-align:center">Continuará....</h3>
       </td>
       </tr>
     </table>
