--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       </tr>
     </table>
     </div>
+    <footer>
+    Contacto: izeland.com@gmail.com
+    </footer>
     </font>    
   </body>
 </html>
