--- a/cat/index.html
+++ b/cat/index.html
@@ -4,7 +4,7 @@
     <font face ="verdana" style="color:white" size="4">
    
     <div><span style="float:right"><a style="color:white" href="../index.html">Español</a></span>
-      <a style="color:white" href="http://izeland.com/cat/info.html">Info</a></div>
+      <a style="color:white" href="http://izeland.com/cat/info.html">Info</a>&nbsp;&nbsp;Contacte: izeland.com@gmail.com</div>
 
     <h1 style="text-align:center">
         Mat Maths ~ Aventures a Izeland
