--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <body style="background-color:midnightblue;">
     <font face ="verdana" style="color:white" size="4">
       
-    <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span><a style="color:white" href="info.html">Info</a>&nbsp;&nbsp;Contacto: izeland.com@gmail.com</div>
+    <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span><a style="color:white" href="info.html">Info</a></div>
       
     <h1 style="text-align:center">
         Mat Maths ~ Aventuras en Izeland
@@ -59,6 +59,7 @@
       </tr>
     </table>
     </div>
+ <div><span style="float:right">Contacto: izeland.com@gmail.com</span></div>
     </font>    
   </body>
 </html>
