--- a/cat/index.html
+++ b/cat/index.html
@@ -26,25 +26,25 @@
       <td valign="top">
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h4>Capítol 1: Vol a Twelville</h4>
-      &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1.pdf" target="_blank">Embarcant</a></br>
-      &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2.pdf" target="_blank">Un passatger molt pelut</a></br>
-      &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3.pdf" target="_blank">Cursa entre avions</a>
+      &nbsp;&nbsp;&nbsp;1.1. <a style="color:white" href="chapters/mm1-1-1cat.pdf" target="_blank">Embarcant</a></br>
+      &nbsp;&nbsp;&nbsp;1.2. <a style="color:white" href="chapters/mm1-1-2cat.pdf" target="_blank">Un passatger molt pelut</a></br>
+      &nbsp;&nbsp;&nbsp;1.3. <a style="color:white" href="chapters/mm1-1-3cat.pdf" target="_blank">Cursa entre avions</a>
       <p>&nbsp;&nbsp;&nbsp;(Unitat 1: Xifres i nombres)</p>
       </td>
       <td valign="top">
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h4>Capítol 2: La coreografia</h4>
-    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1.pdf" target="_blank">Hora del pati</a></br>
-    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2.pdf" target="_blank">Reunió clandestina</a></br>
-    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3.pdf" target="_blank">Escapar de la fàbrica</a>
+    &nbsp;&nbsp;&nbsp;2.1. <a style="color:white" href="chapters/mm1-2-1cat.pdf" target="_blank">Hora del pati</a></br>
+    &nbsp;&nbsp;&nbsp;2.2. <a style="color:white" href="chapters/mm1-2-2cat.pdf" target="_blank">Reunió clandestina</a></br>
+    &nbsp;&nbsp;&nbsp;2.3. <a style="color:white" href="chapters/mm1-2-3cat.pdf" target="_blank">Escapar de la fàbrica</a>
       <p>&nbsp;&nbsp;&nbsp;(Unitat 2: Divisibilitat)</p>
       </td>
       <td valign="top">
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h4>Capítol 3: Dotzè aniversari</h4>
-    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1.pdf" target="_blank">Comença la festa</a></br>
-    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2.pdf" target="_blank">La botiga nova</a></br>
-    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3.pdf" target="_blank">La primera cita</a>
+    &nbsp;&nbsp;&nbsp;3.1. <a style="color:white" href="chapters/mm1-3-1cat.pdf" target="_blank">Comença la festa</a></br>
+    &nbsp;&nbsp;&nbsp;3.2. <a style="color:white" href="chapters/mm1-3-2cat.pdf" target="_blank">La botiga nova</a></br>
+    &nbsp;&nbsp;&nbsp;3.3. <a style="color:white" href="chapters/mm1-3-3cat.pdf" target="_blank">La primera cita</a>
       <p>&nbsp;&nbsp;&nbsp;(Unitat 3: Definició de fraccions)</p>
       </td>
       </tr>
